welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: not found: value flase
  return flase
         ^